Add -pthread to CHECK_CFLAGS if check.pc does not.
Otherwise the tests fail to link under the same circumstances described
in commit 1f8a557c20b468e9ff87d24ef8f53116465c2fe1.

--- a/Makefile.am
+++ b/Makefile.am
@@ -443,7 +443,7 @@ src_tests_test_filters_LDADD = \
 src_tests_check_tests_SOURCES = \
  src/tests/check_main.c \
  src/tests/headerencode_test.c
-src_tests_check_tests_CFLAGS = $(OGG_CFLAGS)
+src_tests_check_tests_CFLAGS = $(OGG_CFLAGS) $(CHECK_CFLAGS)
 src_tests_check_tests_LDADD = \
  src/libdaalabase.la \
  src/libdaaladec.la \
