Add functioning .pc files for daalaenc/dec
Based on a patch from Sebastian Dröge.

--- a/Makefile.am
+++ b/Makefile.am
@@ -521,15 +521,17 @@ AM_CFLAGS = -I$(top_srcdir)/include $(DEPS_CFLAGS)
 dist_doc_DATA = COPYING AUTHORS README.txt
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = daala.pc
+pkgconfig_DATA = daalaenc.pc daaladec.pc
 
 debug: DEBUG_OPTIONS = -DOD_ENABLE_ASSERTIONS -DOD_LOGGING_ENABLED
 debug:
 	$(MAKE) CFLAGS="$(CFLAGS) -O0 -ggdb $(DEBUG_OPTIONS)" all
 
 EXTRA_DIST = \
-	daala.pc.in \
-	daala-uninstalled.pc.in \
+	daalaenc.pc.in \
+	daaladec.pc.in \
+	daalaenc-uninstalled.pc.in \
+	daaladec-uninstalled.pc.in \
 	tools/unix/Makefile \
 	unix/Makefile
 
