--- a/configure.ac
+++ b/configure.ac
@@ -80,8 +80,16 @@ AS_IF([test "$enable_logging" = "yes"], [
   AC_DEFINE([OD_LOGGING_ENABLED], [1], [Enable logging])
 ])
 
+AC_ARG_ENABLE([player],
+  AS_HELP_STRING([--disable-player], [Disable the example player]),,
+  enable_player=yes)
+
+AS_IF([test "$enable_player" = "yes"], [
+  PKG_CHECK_MODULES([SDL], [sdl])
+])
+AM_CONDITIONAL([ENABLE_PLAYER_EXAMPLE], [test "$enable_player" = "yes"])
+
 PKG_CHECK_MODULES([OGG], [ogg >= 1.3])
-PKG_CHECK_MODULES([SDL], [sdl])
 PKG_CHECK_MODULES([PNG], [libpng])
 PKG_CHECK_MODULES([THEORA], [theoradec])
 
