Add hunk missing from commit a8ef9a64.
Because I fail at git.

--- a/configure.ac
+++ b/configure.ac
@@ -193,6 +193,7 @@ AC_MSG_NOTICE([
     Assembly optimizations ....... ${enable_asm}
     Image dumping ................ ${enable_dump_images}
     Unit tests ................... ${enable_unit_tests}
+    Example Player................ ${enable_player}
 ------------------------------------------------------------------------
 
  Use "make tools" to compile the tools.
