Remove theora video loader. r=derf,gmaxwell
A number of the tools can work directly on theora video. This was
convenient when they were being used to develop libtheora, but in
daala they're mostly an extra dependency which slows down people
trying out the code.

--- a/Makefile.am
+++ b/Makefile.am
@@ -198,7 +198,6 @@ tools_png2y4m_LDADD = $(OGG_LIBS) $(PNG_LIBS)
 tools_y4m2png_SOURCES = \
 	tools/vidinput.c \
 	tools/y4m_input.c \
-	tools/th_input.c \
 	tools/y4m2png.c
 tools_y4m2png_CFLAGS = $(THEORA_CFLAGS) $(OGG_CFLAGS) $(PNG_CFLAGS)
 tools_y4m2png_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(PNG_LIBS)
@@ -207,7 +206,6 @@ tools_y4m2png_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(PNG_LIBS)
 tools_dump_psnrhvs_SOURCES = \
 	tools/vidinput.c \
 	tools/y4m_input.c \
-	tools/th_input.c \
 	src/newdct.c \
 	tools/dump_psnrhvs.c
 tools_dump_psnrhvs_CFLAGS = $(THEORA_CFLAGS) $(OGG_CFLAGS) $(PNG_CFLAGS)
@@ -217,7 +215,6 @@ tools_dump_psnrhvs_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(PNG_LIBS) $(LIBM)
 tools_dump_ssim_SOURCES = \
 	tools/vidinput.c \
 	tools/y4m_input.c \
-	tools/th_input.c \
 	tools/dump_ssim.c
 tools_dump_ssim_CFLAGS = $(THEORA_CFLAGS) $(OGG_CFLAGS)
 tools_dump_ssim_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(LIBM)
@@ -226,7 +223,6 @@ tools_dump_ssim_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(LIBM)
 tools_dump_fastssim_SOURCES = \
 	tools/vidinput.c \
 	tools/y4m_input.c \
-	tools/th_input.c \
 	tools/dump_fastssim.c
 tools_dump_fastssim_CFLAGS = $(THEORA_CFLAGS) $(OGG_CFLAGS)
 tools_dump_fastssim_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(LIBM)
@@ -238,7 +234,6 @@ tools_block_size_analysis_SOURCES = \
 	src/block_size_enc.c \
 	tools/vidinput.c \
 	tools/y4m_input.c \
-	tools/th_input.c \
 	src/newdct.c \
 	src/internal.c \
 	src/entcode.c \
@@ -260,8 +255,7 @@ tools_plot_intra_maps_SOURCES = \
 	tools/plot_intra_maps.c \
 	tools/intra_fit_tools.c \
 	tools/vidinput.c \
-	tools/y4m_input.c \
-	tools/th_input.c
+	tools/y4m_input.c
 tools_plot_intra_maps_CFLAGS = $(THEORA_CFLAGS) $(OGG_CFLAGS) $(PNG_CFLAGS)
 tools_plot_intra_maps_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(PNG_LIBS) $(LIBM)
 
@@ -270,8 +264,7 @@ tools_init_intra_maps_SOURCES = \
 	tools/init_intra_maps.c \
 	tools/intra_fit_tools.c \
 	tools/vidinput.c \
-	tools/y4m_input.c \
-	tools/th_input.c
+	tools/y4m_input.c
 tools_init_intra_maps_CFLAGS = $(THEORA_CFLAGS) $(OGG_CFLAGS) $(PNG_CFLAGS)
 tools_init_intra_maps_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(PNG_LIBS) $(LIBM)
 
@@ -287,7 +280,6 @@ tools_intra_stats_SOURCES = \
 	tools/stats_tools.c \
 	tools/vidinput.c \
 	tools/y4m_input.c \
-	tools/th_input.c \
 	tools/image.c \
 	src/block_size.c \
 	src/block_size_enc.c \
@@ -315,7 +307,6 @@ tools_intra_pred_SOURCES = \
 	tools/stats_tools.c \
 	tools/vidinput.c \
 	tools/y4m_input.c \
-	tools/th_input.c \
 	tools/image.c \
 	tools/svd.c \
 	tools/cholesky.c \
@@ -346,7 +337,6 @@ tools_intra_trace_SOURCES = \
 	tools/trans_tools.c \
 	tools/vidinput.c \
 	tools/y4m_input.c \
-	tools/th_input.c \
 	tools/image.c \
 	src/block_size.c \
 	src/block_size_enc.c \
@@ -369,7 +359,6 @@ tools_trans_SOURCES = \
 	tools/intra_fit_tools.c \
 	tools/vidinput.c \
 	tools/y4m_input.c \
-	tools/th_input.c \
 	tools/od_covmat.c \
 	tools/od_filter.c \
 	tools/od_intra.c \
@@ -394,7 +383,6 @@ tools_trans_gain_SOURCES = \
 	src/internal.c \
 	tools/vidinput.c \
 	tools/y4m_input.c \
-	tools/th_input.c \
 	tools/od_filter.c \
 	tools/trans_tools.c \
 	src/filter.c \
@@ -410,7 +398,6 @@ tools_trans2d_SOURCES = \
 	tools/intra_fit_tools.c \
 	tools/vidinput.c \
 	tools/y4m_input.c \
-	tools/th_input.c \
 	tools/od_covmat.c \
 	tools/od_filter.c \
 	tools/od_intra.c \
@@ -437,7 +424,6 @@ tools_init_intra_xform_SOURCES = \
 	tools/svd.c \
 	tools/vidinput.c \
 	tools/y4m_input.c \
-	tools/th_input.c \
 	src/filter.c \
 	src/newdct.c \
 	src/intra.c \
