Add SSE versions of SAD.
Only handles xstride==1 and square block sizes for now.
Ultimately something will need to be done about the alignment of
 the width-16 versions.

Timing results from
bench.sh ./examples/encoder_example akiyo_qcif.y4m -k 256 /dev/null

Unmodified encoder:
31218 ms (stddev 28) [31169 31182 {31193 31196 31206 31240 31256} 31486 31599]

With this patch:
18134 ms (stddev 103) [17998 18028 {18034 18072 18073 18237 18255} 18282 18398]

Fast motion estimation options (level_max = 0, no chroma ME, no
 subpel refinement):
11044 ms (stddev 5) [11021 11036 {11040 11041 11042 11043 11052} 11053 11054]

Fast ME + patch:
2610 ms (stddev 2) [2602 2603 {2608 2608 2610 2610 2612} 2613 2651]

Signed-off-by: Timothy B. Terriberry <tterribe@xiph.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,7 +33,10 @@ noinst_HEADERS = \
 	src/pvq_code.h \
 	src/state.h \
 	src/tf.h \
-	src/metrics.h
+	src/metrics.h \
+	src/x86/cpu.h \
+	src/x86/x86enc.h \
+	src/x86/x86int.h
 
 src_libdaalabase_la_CFLAGS = $(OGG_CFLAGS)
 src_libdaalabase_la_LIBADD = $(OGG_LIBS) $(LIBM)
@@ -73,8 +76,6 @@ src_libdaalabase_la_SOURCES = \
 if ENABLE_X86ASM
 src_libdaalabase_la_SOURCES += \
 	src/x86/cpu.c \
-	src/x86/cpu.h \
-	src/x86/x86int.h \
 	src/x86/sse2mc.c \
 	src/x86/x86state.c
 endif
@@ -105,6 +106,11 @@ src_libdaalaenc_la_SOURCES = \
 	src/infoenc.c \
 	src/mcenc.c \
         src/metrics.c
+if ENABLE_X86ASM
+src_libdaalaenc_la_SOURCES += \
+        src/x86/x86enc.c \
+        src/x86/x86mcenc.c
+endif
 
 # Example programs
 
