--- a/unix/Makefile
+++ b/unix/Makefile
@@ -60,6 +60,7 @@ CFLAGS := -DOD_LOGGING_ENABLED $(CFLAGS)
 CFLAGS := -DOD_ENABLE_ASSERTIONS $(CFLAGS)
 #CFLAGS := -DOD_CHECKASM $(CFLAGS)
 #CFLAGS := -DOD_DUMP_IMAGES $(CFLAGS)
+#CFLAGS := -DOD_ENCODER_CHECK $(CFLAGS)
 #CFLAGS := -DOD_ANIMATE $(CFLAGS)
 #CFLAGS := -DOD_LOGGING_ENABLED $(CFLAGS)
 CFLAGS := -fPIC $(CFLAGS)
@@ -83,6 +84,12 @@ LIBS = `pkg-config ogg --libs` `sdl-config --libs` -lm
 ifeq ($(findstring -DOD_DUMP_IMAGES,${CFLAGS}),-DOD_DUMP_IMAGES)
     LIBS += -lpng -lz
 endif
+
+LIBDAALAENC_LIBS = ${LIBDAALAENC_TARGET}
+ifeq ($(findstring -DOD_ENCODER_CHECK,${CFLAGS}),-DOD_ENCODER_CHECK)
+    LIBDAALAENC_LIBS += ${LIBDAALADEC_TARGET}
+endif
+
 
 CHECK_LIBS := -pthread $(shell pkg-config check --libs)
 
@@ -297,7 +304,7 @@ ${ENCODER_EXAMPLE_TARGET}: ${ENCODER_EXAMPLE_OBJS} ${LIBDAALABASE_TARGET} \
                             ${LIBDAALAENC_TARGET}
 	mkdir -p ${TARGETBINDIR}
 	${CC} ${CFLAGS} -o $@ ${ENCODER_EXAMPLE_OBJS} \
-         ${LIBDAALAENC_TARGET} ${LIBDAALABASE_TARGET} ${LIBS}
+        ${LIBDAALAENC_LIBS} ${LIBDAALABASE_TARGET} ${LIBS}
 
 # player_example
 ${PLAYER_EXAMPLE_TARGET}: ${PLAYER_EXAMPLE_OBJS} ${LIBDAALABASE_TARGET} \
@@ -327,7 +334,7 @@ ${TEST_HEADER_TARGET}: ${TEST_HEADER_OBJS} ${LIBDAALADEC_TARGET} \
  ${LIBDAALAENC_TARGET} ${LIBDAALABASE_TARGET}
 	mkdir -p ${TESTBINDIR}
 	${CC} ${CFLAGS} ${TEST_HEADER_OBJS} ${TEST_HEADER_LIBS} -o $@ \
-	  ${LIBDAALADEC_TARGET} ${LIBDAALAENC_TARGET} ${LIBDAALABASE_TARGET} \
+	  ${LIBDAALAENC_TARGET} ${LIBDAALADEC_TARGET} ${LIBDAALABASE_TARGET} \
 	  -lm
 
 # logging_test
