Removes README.txt from Makefile.am

--- a/Makefile.am
+++ b/Makefile.am
@@ -571,7 +571,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 AM_CFLAGS = -I$(top_srcdir)/include $(DEPS_CFLAGS)
 
-dist_doc_DATA = COPYING AUTHORS README.txt
+dist_doc_DATA = COPYING AUTHORS
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = daalaenc.pc daaladec.pc
