--- a/tools/unix/Makefile
+++ b/tools/unix/Makefile
@@ -392,10 +392,26 @@ GEN_LAPLACE_TABLES_CSOURCES:= \
  ${GEN_LAPLACE_TABLES_LIB_CSOURCES:%=${LIBSRCDIR}/%}
 GEN_LAPLACE_TABLES_TARGET:=gen_laplace_tables
 
+#bjontegaard
+BD_LOCAL_CSOURCES = \
+bjontegaard.c \
+cholesky.c \
+svd.c \
+qr.c
+
+BD_LIB_CSOURCES =
+
+BD_LDFLAGS = -lm
+
+BD_OBJS:=${BD_LOCAL_CSOURCES} ${BD_LIB_CSOURCES}
+BD_OBJS:=${BD_OBJS:%.c=${WORKDIR}/%.o}
+BD_CSOURCES:=${BD_LOCAL_CSOURCES:%=${LOCALSRCDIR}/%} \
+ ${BD_LIB_CSOURCES:%=${LIBSRCDIR}/%}
+BD_TARGET:=bjontegaard
 
 ALL_OBJS:=${P2Y_OBJS} ${Y2P_OBJS} ${PSNRHVS_OBJS} ${PIM_OBJS} ${IIM_OBJS} ${IIX_OBJS} \
  ${GEN_CDF_OBJS} ${GEN_LAPLACE_TABLES_OBJS} ${IS_OBJS} ${IP_OBJS} ${IT_OBJS} ${T_OBJS} \
- ${TG_OBJS} ${T2D_OBJS} ${BSIZE_OBJS}
+ ${TG_OBJS} ${T2D_OBJS} ${BSIZE_OBJS} ${BD_OBJS}
 
 ALL_ASMS:=${ALL_OBJS:%.o=%.s}
 
@@ -404,7 +420,7 @@ ALL_DEPS:=${ALL_OBJS:%.o=%.d}
 ALL_TARGETS:=${P2Y_TARGET} ${Y2P_TARGET} ${PSNRHVS_TARGET} \
  ${PIM_TARGET} ${IIM_TARGET} ${IIX_TARGET} ${GEN_CDF_TARGET} \
  ${GEN_LAPLACE_TABLES_TARGET} ${IS_TARGET} ${IP_TARGET} ${IT_TARGET} \
- ${T_TARGET} ${TG_TARGET} ${T2D_TARGET} ${BSIZE_TARGET}
+ ${T_TARGET} ${TG_TARGET} ${T2D_TARGET} ${BSIZE_TARGET} ${BD_TARGET}
 
 all: ${ALL_TARGETS}
 
@@ -461,6 +477,9 @@ ${GEN_CDF_TARGET}: ${GEN_CDF_OBJS}
 
 ${GEN_LAPLACE_TABLES_TARGET}: ${GEN_LAPLACE_TABLES_OBJS}
 	${CC} ${CFLAGS} ${GEN_LAPLACE_TABLES_OBJS} ${GEN_LAPLACE_TABLES_LDFLAGS} -o $@
+
+${BD_TARGET}: ${BD_OBJS}
+	${CC} ${CFLAGS} ${BD_OBJS} ${BD_LDFLAGS} -o $@
 
 ${ALL_OBJS} ${ALL_ASMS} ${ALL_DEPS} ${ALL_TARGETS}: Makefile
 
